[gd_scene load_steps=5 format=3 uid="uid://b3esbi744yhw4"]

[ext_resource type="Texture2D" uid="uid://43pdfwq6tow5" path="res://Assets/graphics/game_elements/ground/diamond/diamond ore.png" id="1_su662"]
[ext_resource type="Script" path="res://Scripts/diamond.gd" id="1_x3w0f"]
[ext_resource type="AudioStream" uid="uid://t2ok8kikntn7" path="res://Assets/sounds/diamond dig.wav" id="3_8qnpb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7vsig"]
size = Vector2(150, 150)

[node name="Diamond" type="StaticBody2D"]
scale = Vector2(1.2, 1.2)
script = ExtResource("1_x3w0f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7vsig")

[node name="Sprite2D" type="Sprite2D" parent="CollisionShape2D"]
texture = ExtResource("1_su662")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_8qnpb")
bus = &"SFX"

[node name="Timer" type="Timer" parent="."]

[connection signal="got_damage" from="." to="." method="_on_got_damage"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
